[imad-console] Updates ui/articles.css

--- a/ui/articles.css
+++ b/ui/articles.css
@@ -1,6 +1,5 @@
-body    {
+body {
     font-family: sans-serif;
-    background-color: blue;
-    
+    background-color: lightgrey;
+    margin-top: 75px;
 }
-
